--- a/pom.xml
+++ b/pom.xml
@@ -89,7 +89,7 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.security</groupId>
+			<groupId>org.springframework.security</groupId>'
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
