change pipeline file

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,6 @@
-name: Build and Deploy Java App
+# .github/workflows/ci-cd.yml
+
+name: CI/CD Pipeline
 
 on:
   push:
@@ -6,46 +8,36 @@ on:
       - main
       - dev
       - qas
-
-env:
-  CLOUD: aws
-  VERSION: "21"
-  TARGET_NAME: "opv-api"
+  pull_request:
+    branches:
+      - main
+      - dev
+      - qas
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Checkout cloud-templates repository
-        uses: actions/checkout@v4
-        with:
-          repository: cloud-devops/cloud-templates
-          ref: refs/tags/v2.2.0
-          path: cloud-templates
-
-      - name: Set environment variable for account_id
-        run: echo "ACCOUNT_ID=account_${GITHUB_REF##*/}" >> $GITHUB_ENV
-
-      - name: Set up Java
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: ${{ env.VERSION }}
+          distribution: 'corretto'
+          java-version: '21'
+
+      - name: Cache Maven dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn -B clean install
 
-      - name: Set up kubectl
-        uses: azure/setup-kubectl@v3
-
-      - name: Set up Kustomize
-        uses: imranismail/setup-kustomize@v2
-
-      - name: Deploy to Kubernetes
-        run: |
-          kustomize build ./k8s-kustomize | kubectl apply -f -
-
+      - name: Run tests
+        run: mvn test
