change liquibase file

--- a/src/main/resources/liquibase.properties
+++ b/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
 driver=org.postgresql.Driver
-referenceUrl=hibernate:spring:com.embraer.fc_api?dialect=org.hibernate.dialect.PostgreSQLDialect&hibernate.physical_naming_strategy=io.hypersistence.utils.hibernate.naming.CamelCaseToSnakeCaseNamingStrategy
+referenceUrl=hibernate:spring:com.example.fc_api?dialect=org.hibernate.dialect.PostgreSQLDialect&hibernate.physical_naming_strategy=io.hypersistence.utils.hibernate.naming.CamelCaseToSnakeCaseNamingStrategy
 referenceDriver=liquibase.ext.hibernate.database.connection.HibernateDriver
 changeLogFile=src/main/resources/db/changelog/master.xml
