--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 		<version>3.4.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.embraer</groupId>
+	<groupId>com.example</groupId>
 	<artifactId>fc-api</artifactId>
 	<version>0.00.1</version>
 	<name>fc-api</name>
