rollback application.yaml

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,9 +6,9 @@ spring:
   application:
     name: fc-api
   datasource:
-    url: ${SPRING_DATASOURCE_URL}
-    username: ${SPRING_DATASOURCE_USERNAME}
-    password: ${SPRING_DATASOURCE_PASSWORD}
+    url: jdbc:postgresql://localhost:5432/fc?currentSchema=dashboard-dev
+    username: puser
+    password: psqlpassword
   jpa:
     properties:
       hibernate:
