--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,6 +9,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/fc?currentSchema=dashboard-dev
     username: puser
     password: psqlpassword
+    driver-class-name: org.postgresql.Driver
   jpa:
     properties:
       hibernate:
